src/llm_interpreter/antlr4_parsers/imp/IMPBASEParser.py
# Generated from IMPBASE.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class IMPBASEParser(Parser):
    grammarFileName = "IMPBASE.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "','",
        "'.Ids'",
        "';'",
        "'int'",
        "'='",
        "'if'",
        "'('",
        "')'",
        "'{'",
        "'}'",
        "'else'",
        "'while'",
        "'halt'",
        "'continue'",
        "'break'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'!'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "BOOL",
        "ADDSUBOP",
        "MULDIVOP",
        "RELOP",
        "LOGNOT",
        "LOGICALOP",
        "ID",
        "LITERAL",
        "WS",
    ]

    RULE_program = 0
    RULE_ids = 1
    RULE_stmt_list = 2
    RULE_stmt = 3
    RULE_aexp = 4
    RULE_addsubexp = 5
    RULE_muldivexp = 6
    RULE_unaryexp = 7
    RULE_bexp = 8
    RULE_logicalexp = 9
    RULE_notexp = 10
    RULE_relexp = 11
    RULE_atomexp = 12
    RULE_boolatomexp = 13

    ruleNames = [
        "program",
        "ids",
        "stmt_list",
        "stmt",
        "aexp",
        "addsubexp",
        "muldivexp",
        "unaryexp",
        "bexp",
        "logicalexp",
        "notexp",
        "relexp",
        "atomexp",
        "boolatomexp",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    BOOL = 16
    ADDSUBOP = 17
    MULDIVOP = 18
    RELOP = 19
    LOGNOT = 20
    LOGICALOP = 21
    ID = 22
    LITERAL = 23
    WS = 24

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ProgramContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt_list(self):
            return self.getTypedRuleContext(IMPBASEParser.Stmt_listContext, 0)

        def getRuleIndex(self):
            return IMPBASEParser.RULE_program

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitProgram"):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)

    def program(self):
        localctx = IMPBASEParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.stmt_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i: int = None):
            if i is None:
                return self.getTokens(IMPBASEParser.ID)
            else:
                return self.getToken(IMPBASEParser.ID, i)

        def getRuleIndex(self):
            return IMPBASEParser.RULE_ids

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIds"):
                listener.enterIds(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIds"):
                listener.exitIds(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitIds"):
                return visitor.visitIds(self)
            else:
                return visitor.visitChildren(self)

    def ids(self):
        localctx = IMPBASEParser.IdsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_ids)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(IMPBASEParser.ID)
            self.state = 35
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 0, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 31
                    self.match(IMPBASEParser.T__0)
                    self.state = 32
                    self.match(IMPBASEParser.ID)
                self.state = 37
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 0, self._ctx)

            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 1:
                self.state = 38
                self.match(IMPBASEParser.T__0)
                self.state = 39
                self.match(IMPBASEParser.T__1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Stmt_listContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(IMPBASEParser.StmtContext)
            else:
                return self.getTypedRuleContext(IMPBASEParser.StmtContext, i)

        def getRuleIndex(self):
            return IMPBASEParser.RULE_stmt_list

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStmt_list"):
                listener.enterStmt_list(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStmt_list"):
                listener.exitStmt_list(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStmt_list"):
                return visitor.visitStmt_list(self)
            else:
                return visitor.visitChildren(self)

    def stmt_list(self):
        localctx = IMPBASEParser.Stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt_list)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 4255824) != 0:
                self.state = 42
                self.stmt()
                self.state = 44
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 3:
                    self.state = 43
                    self.match(IMPBASEParser.T__2)

                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return IMPBASEParser.RULE_stmt

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class ContinueStmtContext(StmtContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a IMPBASEParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterContinueStmt"):
                listener.enterContinueStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitContinueStmt"):
                listener.exitContinueStmt(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitContinueStmt"):
                return visitor.visitContinueStmt(self)
            else:
                return visitor.visitChildren(self)

    class IfStmtContext(StmtContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a IMPBASEParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def bexp(self):
            return self.getTypedRuleContext(IMPBASEParser.BexpContext, 0)

        def stmt_list(self):
            return self.getTypedRuleContext(IMPBASEParser.Stmt_listContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIfStmt"):
                listener.enterIfStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIfStmt"):
                listener.exitIfStmt(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitIfStmt"):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)

    class IfElseStmtContext(StmtContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a IMPBASEParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def bexp(self):
            return self.getTypedRuleContext(IMPBASEParser.BexpContext, 0)

        def stmt_list(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(IMPBASEParser.Stmt_listContext)
            else:
                return self.getTypedRuleContext(IMPBASEParser.Stmt_listContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterIfElseStmt"):
                listener.enterIfElseStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitIfElseStmt"):
                listener.exitIfElseStmt(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitIfElseStmt"):
                return visitor.visitIfElseStmt(self)
            else:
                return visitor.visitChildren(self)

    class WhileStmtContext(StmtContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a IMPBASEParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def bexp(self):
            return self.getTypedRuleContext(IMPBASEParser.BexpContext, 0)

        def stmt_list(self):
            return self.getTypedRuleContext(IMPBASEParser.Stmt_listContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterWhileStmt"):
                listener.enterWhileStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitWhileStmt"):
                listener.exitWhileStmt(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitWhileStmt"):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)

    class AssignStmtContext(StmtContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a IMPBASEParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(IMPBASEParser.ID, 0)

        def aexp(self):
            return self.getTypedRuleContext(IMPBASEParser.AexpContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAssignStmt"):
                listener.enterAssignStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAssignStmt"):
                listener.exitAssignStmt(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAssignStmt"):
                return visitor.visitAssignStmt(self)
            else:
                return visitor.visitChildren(self)

    class BreakStmtContext(StmtContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a IMPBASEParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBreakStmt"):
                listener.enterBreakStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBreakStmt"):
                listener.exitBreakStmt(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBreakStmt"):
                return visitor.visitBreakStmt(self)
            else:
                return visitor.visitChildren(self)

    class DeclStmtContext(StmtContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a IMPBASEParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ids(self):
            return self.getTypedRuleContext(IMPBASEParser.IdsContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDeclStmt"):
                listener.enterDeclStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDeclStmt"):
                listener.exitDeclStmt(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDeclStmt"):
                return visitor.visitDeclStmt(self)
            else:
                return visitor.visitChildren(self)

    class HaltStmtContext(StmtContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a IMPBASEParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterHaltStmt"):
                listener.enterHaltStmt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitHaltStmt"):
                listener.exitHaltStmt(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitHaltStmt"):
                return visitor.visitHaltStmt(self)
            else:
                return visitor.visitChildren(self)

    def stmt(self):
        localctx = IMPBASEParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stmt)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 4, self._ctx)
            if la_ == 1:
                localctx = IMPBASEParser.DeclStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.match(IMPBASEParser.T__3)
                self.state = 52
                self.ids()
                pass

            elif la_ == 2:
                localctx = IMPBASEParser.AssignStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.match(IMPBASEParser.ID)
                self.state = 54
                self.match(IMPBASEParser.T__4)
                self.state = 55
                self.aexp()
                pass

            elif la_ == 3:
                localctx = IMPBASEParser.IfElseStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.match(IMPBASEParser.T__5)
                self.state = 57
                self.match(IMPBASEParser.T__6)
                self.state = 58
                self.bexp()
                self.state = 59
                self.match(IMPBASEParser.T__7)
                self.state = 60
                self.match(IMPBASEParser.T__8)
                self.state = 61
                self.stmt_list()
                self.state = 62
                self.match(IMPBASEParser.T__9)
                self.state = 63
                self.match(IMPBASEParser.T__10)
                self.state = 64
                self.match(IMPBASEParser.T__8)
                self.state = 65
                self.stmt_list()
                self.state = 66
                self.match(IMPBASEParser.T__9)
                pass

            elif la_ == 4:
                localctx = IMPBASEParser.IfStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.match(IMPBASEParser.T__5)
                self.state = 69
                self.match(IMPBASEParser.T__6)
                self.state = 70
                self.bexp()
                self.state = 71
                self.match(IMPBASEParser.T__7)
                self.state = 72
                self.match(IMPBASEParser.T__8)
                self.state = 73
                self.stmt_list()
                self.state = 74
                self.match(IMPBASEParser.T__9)
                pass

            elif la_ == 5:
                localctx = IMPBASEParser.WhileStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 76
                self.match(IMPBASEParser.T__11)
                self.state = 77
                self.match(IMPBASEParser.T__6)
                self.state = 78
                self.bexp()
                self.state = 79
                self.match(IMPBASEParser.T__7)
                self.state = 80
                self.match(IMPBASEParser.T__8)
                self.state = 81
                self.stmt_list()
                self.state = 82
                self.match(IMPBASEParser.T__9)
                pass

            elif la_ == 6:
                localctx = IMPBASEParser.HaltStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 84
                self.match(IMPBASEParser.T__12)
                pass

            elif la_ == 7:
                localctx = IMPBASEParser.ContinueStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 85
                self.match(IMPBASEParser.T__13)
                pass

            elif la_ == 8:
                localctx = IMPBASEParser.BreakStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 86
                self.match(IMPBASEParser.T__14)
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AexpContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def addsubexp(self):
            return self.getTypedRuleContext(IMPBASEParser.AddsubexpContext, 0)

        def getRuleIndex(self):
            return IMPBASEParser.RULE_aexp

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAexp"):
                listener.enterAexp(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAexp"):
                listener.exitAexp(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAexp"):
                return visitor.visitAexp(self)
            else:
                return visitor.visitChildren(self)

    def aexp(self):
        localctx = IMPBASEParser.AexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_aexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.addsubexp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AddsubexpContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def muldivexp(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(IMPBASEParser.MuldivexpContext)
            else:
                return self.getTypedRuleContext(IMPBASEParser.MuldivexpContext, i)

        def ADDSUBOP(self, i: int = None):
            if i is None:
                return self.getTokens(IMPBASEParser.ADDSUBOP)
            else:
                return self.getToken(IMPBASEParser.ADDSUBOP, i)

        def getRuleIndex(self):
            return IMPBASEParser.RULE_addsubexp

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAddsubexp"):
                listener.enterAddsubexp(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAddsubexp"):
                listener.exitAddsubexp(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAddsubexp"):
                return visitor.visitAddsubexp(self)
            else:
                return visitor.visitChildren(self)

    def addsubexp(self):
        localctx = IMPBASEParser.AddsubexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_addsubexp)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.muldivexp()
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 17:
                self.state = 92
                self.match(IMPBASEParser.ADDSUBOP)
                self.state = 93
                self.muldivexp()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MuldivexpContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unaryexp(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(IMPBASEParser.UnaryexpContext)
            else:
                return self.getTypedRuleContext(IMPBASEParser.UnaryexpContext, i)

        def MULDIVOP(self, i: int = None):
            if i is None:
                return self.getTokens(IMPBASEParser.MULDIVOP)
            else:
                return self.getToken(IMPBASEParser.MULDIVOP, i)

        def getRuleIndex(self):
            return IMPBASEParser.RULE_muldivexp

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterMuldivexp"):
                listener.enterMuldivexp(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitMuldivexp"):
                listener.exitMuldivexp(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitMuldivexp"):
                return visitor.visitMuldivexp(self)
            else:
                return visitor.visitChildren(self)

    def muldivexp(self):
        localctx = IMPBASEParser.MuldivexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_muldivexp)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.unaryexp()
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 18:
                self.state = 100
                self.match(IMPBASEParser.MULDIVOP)
                self.state = 101
                self.unaryexp()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class UnaryexpContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomexp(self):
            return self.getTypedRuleContext(IMPBASEParser.AtomexpContext, 0)

        def ADDSUBOP(self):
            return self.getToken(IMPBASEParser.ADDSUBOP, 0)

        def getRuleIndex(self):
            return IMPBASEParser.RULE_unaryexp

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterUnaryexp"):
                listener.enterUnaryexp(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitUnaryexp"):
                listener.exitUnaryexp(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitUnaryexp"):
                return visitor.visitUnaryexp(self)
            else:
                return visitor.visitChildren(self)

    def unaryexp(self):
        localctx = IMPBASEParser.UnaryexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_unaryexp)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 17:
                self.state = 107
                self.match(IMPBASEParser.ADDSUBOP)

            self.state = 110
            self.atomexp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BexpContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalexp(self):
            return self.getTypedRuleContext(IMPBASEParser.LogicalexpContext, 0)

        def getRuleIndex(self):
            return IMPBASEParser.RULE_bexp

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBexp"):
                listener.enterBexp(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBexp"):
                listener.exitBexp(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBexp"):
                return visitor.visitBexp(self)
            else:
                return visitor.visitChildren(self)

    def bexp(self):
        localctx = IMPBASEParser.BexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_bexp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.logicalexp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LogicalexpContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def notexp(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(IMPBASEParser.NotexpContext)
            else:
                return self.getTypedRuleContext(IMPBASEParser.NotexpContext, i)

        def LOGICALOP(self, i: int = None):
            if i is None:
                return self.getTokens(IMPBASEParser.LOGICALOP)
            else:
                return self.getToken(IMPBASEParser.LOGICALOP, i)

        def getRuleIndex(self):
            return IMPBASEParser.RULE_logicalexp

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterLogicalexp"):
                listener.enterLogicalexp(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitLogicalexp"):
                listener.exitLogicalexp(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitLogicalexp"):
                return visitor.visitLogicalexp(self)
            else:
                return visitor.visitChildren(self)

    def logicalexp(self):
        localctx = IMPBASEParser.LogicalexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_logicalexp)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.notexp()
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 21:
                self.state = 115
                self.match(IMPBASEParser.LOGICALOP)
                self.state = 116
                self.notexp()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NotexpContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relexp(self):
            return self.getTypedRuleContext(IMPBASEParser.RelexpContext, 0)

        def LOGNOT(self):
            return self.getToken(IMPBASEParser.LOGNOT, 0)

        def getRuleIndex(self):
            return IMPBASEParser.RULE_notexp

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterNotexp"):
                listener.enterNotexp(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitNotexp"):
                listener.exitNotexp(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitNotexp"):
                return visitor.visitNotexp(self)
            else:
                return visitor.visitChildren(self)

    def notexp(self):
        localctx = IMPBASEParser.NotexpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_notexp)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 20:
                self.state = 122
                self.match(IMPBASEParser.LOGNOT)

            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 10, self._ctx)
            if la_ == 1:
                self.state = 125
                self.match(IMPBASEParser.T__6)

            self.state = 128
            self.relexp()
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 11, self._ctx)
            if la_ == 1:
                self.state = 129
                self.match(IMPBASEParser.T__7)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RelexpContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boolatomexp(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(IMPBASEParser.BoolatomexpContext)
            else:
                return self.getTypedRuleContext(IMPBASEParser.BoolatomexpContext, i)

        def RELOP(self, i: int = None):
            if i is None:
                return self.getTokens(IMPBASEParser.RELOP)
            else:
                return self.getToken(IMPBASEParser.RELOP, i)

        def getRuleIndex(self):
            return IMPBASEParser.RULE_relexp

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRelexp"):
                listener.enterRelexp(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRelexp"):
                listener.exitRelexp(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRelexp"):
                return visitor.visitRelexp(self)
            else:
                return visitor.visitChildren(self)
